Use snakeyaml Unicode readers